src/patternfly/components/Drawer/drawer.scss
/* ... */
// Content / panel
.pf-c-drawer__content,
.pf-c-drawer__panel {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  overflow: auto;
}

// Content
.pf-c-drawer__content {
  --pf-c-drawer--child--PaddingTop: var(--pf-c-drawer__content--child--PaddingTop);
  --pf-c-drawer--child--PaddingRight: var(--pf-c-drawer__content--child--PaddingRight);
  --pf-c-drawer--child--PaddingBottom: var(--pf-c-drawer__content--child--PaddingBottom);
  --pf-c-drawer--child--PaddingLeft: var(--pf-c-drawer__content--child--PaddingLeft);

  z-index: var(--pf-c-drawer__content--ZIndex);
  flex-basis: var(--pf-c-drawer__content--FlexBasis);
  order: 0;
  background-color: var(--pf-c-drawer__content--BackgroundColor);

  &.pf-m-no-background {
    --pf-c-drawer__content--BackgroundColor: transparent;
  }
}

// Panel
.pf-c-drawer__panel {
  position: relative;
  z-index: var(--pf-c-drawer__panel--ZIndex);
  flex-basis: var(--pf-c-drawer__panel--FlexBasis);
  order: 1;
  overflow: auto;
  background-color: var(--pf-c-drawer__panel--BackgroundColor);
  box-shadow: var(--pf-c-drawer__panel--BoxShadow);
  transition-duration: var(--pf-c-drawer__panel--TransitionDuration);
  transition-property: var(--pf-c-drawer__panel--TransitionProperty);
  -webkit-overflow-scrolling: touch;

  &::after {
    position: absolute;
    top: 0;
    left: 0;
    width: var(--pf-c-drawer__panel--after--Width);
    height: 100%;
    content: "";
    background-color: var(--pf-c-drawer__panel--after--BackgroundColor);
  }

  &.pf-m-no-background {
    --pf-c-drawer__content--BackgroundColor: transparent;
  }
}

// Panel head
.pf-c-drawer__head {
  display: grid;
  grid-template-columns: auto;
  grid-auto-columns: max-content;

  > * {
    grid-column: 1;
  }
}

// Panel actions
.pf-c-drawer__actions {
  grid-column: 2;
  grid-row: 1;
  display: flex;
  align-self: baseline;
  margin-top: var(--pf-c-drawer__actions--MarginTop);
  margin-right: var(--pf-c-drawer__actions--MarginRight);
}

// Modified content children
.pf-c-drawer__body {
  padding: var(--pf-c-drawer--child--PaddingTop) var(--pf-c-drawer--child--PaddingRight) var(--pf-c-drawer--child--PaddingBottom) var(--pf-c-drawer--child--PaddingLeft);

  // No padding
  &.pf-m-no-padding {
    // remove margin if child of no padding
    --pf-c-drawer__actions--MarginTop: 0;
    --pf-c-drawer__actions--MarginRight: 0;

    // child padding
    --pf-c-drawer--child--PaddingTop: 0;
    --pf-c-drawer--child--PaddingRight: 0;
    --pf-c-drawer--child--PaddingBottom: 0;
    --pf-c-drawer--child--PaddingLeft: 0;
  }

  // Padding
  &.pf-m-padding {
    --pf-c-drawer--child--PaddingTop: var(--pf-c-drawer--child--m-padding--PaddingTop);
    --pf-c-drawer--child--PaddingRight: var(--pf-c-drawer--child--m-padding--PaddingRight);
    --pf-c-drawer--child--PaddingBottom: var(--pf-c-drawer--child--m-padding--PaddingBottom);
    --pf-c-drawer--child--PaddingLeft: var(--pf-c-drawer--child--m-padding--PaddingLeft);
  }

  &:not(.pf-m-no-padding) + * {
    --pf-c-drawer--child--PaddingTop: 0;
  }
}

// Body
.pf-c-drawer__body:last-of-type {
  flex: 1 0 auto;
}

// Expanded
.pf-c-drawer.pf-m-expanded .pf-c-drawer__panel {
  transform: translateX(-100%);
}

// Page level drawer
.pf-c-drawer .pf-c-page__main {
  min-height: 100%;
}

// Layout modifications happen after md breakpoint
@media screen and (min-width: $pf-global--breakpoint--md) {
  // Default
  .pf-c-drawer {
    .pf-c-drawer__content {
      order: 0;
    }

    .pf-c-drawer__panel {
      order: 1;
      transform: translateX(0);
    }

    // Expanded
    &.pf-m-expanded {
      .pf-c-drawer__panel {
        --pf-c-drawer__panel--BoxShadow: var(--pf-c-drawer--m-expanded__panel--BoxShadow);

        transform: translateX(-100%);
      }
    }
  }

  // Panel left
  .pf-c-drawer.pf-m-panel-left {
    .pf-c-drawer__content {
      order: 1;
    }

    .pf-c-drawer__panel {
      order: 0;
      margin-right: calc(var(--pf-c-drawer__panel--FlexBasis) * -1);
      transform: translateX(-100%);
    }

    // Expanded, panel left
    &.pf-m-expanded .pf-c-drawer__panel {
      --pf-c-drawer__panel--BoxShadow: var(--pf-c-drawer--m-expanded--m-panel-left__panel--BoxShadow);

      transform: translateX(0);
    }
  }

  // stylelint-disable selector-max-class
  .pf-c-drawer.pf-m-panel-left .pf-c-drawer__panel::after {
    right: 0;
    left: auto;
  }
  // stylelint-enable

  // Border
  .pf-c-drawer .pf-c-drawer__panel.pf-m-no-border,
  .pf-c-drawer.pf-m-panel-left .pf-c-drawer__panel.pf-m-no-border {
    --pf-c-drawer__panel--BoxShadow: transparent;
  }
}

// Responsive width modifiers
@each $breakpoint, $breakpoint-value in $pf-c-drawer--breakpoint-map--width {
  $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");

  @if $breakpoint == "base" {
    $breakpoint: "md";
  }

  @include pf-apply-breakpoint($breakpoint, $pf-c-drawer--breakpoint-map--width) {
    @each $width-value in $pf-c-drawer__panel--list--width {
      .pf-c-drawer__panel.pf-m-width-#{$width-value}#{$breakpoint-name} {
        --pf-c-drawer__panel--FlexBasis: #{percentage($width-value / 100)};
      }
    }
  }
}
/* ... */

